# aoc2019

./: .gitignore  Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: color_text.rs  dynamic_map.rs  intcode_comp.rs  lib.rs  log.rs  point.rs
task01_1/: Cargo.toml
task01_1/src/: main.rs
task01_2/: Cargo.toml
task01_2/src/: main.rs
task02_1/: Cargo.toml
task02_1/src/: main.rs
task02_2/: Cargo.toml
task02_2/src/: main.rs
task03_1/: Cargo.toml
task03_1/src/: main.rs
task03_2/: Cargo.toml
task03_2/src/: main.rs
task04_1/: Cargo.toml
task04_1/src/: main.rs
task04_2/: Cargo.toml  res.txt
task04_2/src/: main.rs
task05_1/: Cargo.toml
task05_1/src/: main.rs
task05_2/: Cargo.toml
task05_2/src/: main.rs
task06_1/: Cargo.toml
task06_1/src/: main.rs
task06_2/: Cargo.toml
task07_1/: Cargo.toml
task07_2/: Cargo.toml
task08_1/: Cargo.toml
task08_2/: Cargo.toml
task09_1/: Cargo.toml  res2.txt
task10_1/: Cargo.toml
task10_2/: Cargo.toml
task11_1/: Cargo.toml  res.txt
task12_1/: Cargo.toml
task13_1/: Cargo.toml
task14_1/: Cargo.toml
task15_1/: Cargo.toml
task16_1/: Cargo.toml
task17_1/: Cargo.toml
task17_1/src/: camera.rs  main.rs  robot.rs
task18_1/: Cargo.toml  res.txt
task19_1/: Cargo.toml
task20_1/: Cargo.toml  input.txt
task20_2/: Cargo.toml
task21_1/: Cargo.toml
task22_1/: Cargo.toml
task22_2/: Cargo.toml
task22_2/src/: main.rs
task23_1/: Cargo.toml
task23_2/: Cargo.toml
task24_1/: Cargo.toml
task24_2/: Cargo.toml
task24_2/src/: biome_field.rs  main.rs
task25_1/: Cargo.toml
(+45 files in other folders)
