[workspace]
members = [
    "common",
    "task01_1", "task01_2",
    "task02_1", "task02_2",
    "task03_1", "task03_2",
    "task04_1", "task04_2",
    "task05_1", "task05_2",
    "task06_1", "task06_2",
    "task07_1", "task07_2",
    "task08_1", "task08_2",
    "task09_1",
    "task10_1", "task10_2",
    "task11_1",
    "task12_1",
    "task13_1",
    "task14_1",
    "task15_1",
    "task16_1",
    "task17_1",
    "task18_1",
]
