[package]
name = "task17_1"
version = "0.1.0"
authors = ["Oleg Khryptul <okreptul@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
anyhow = "1.0"
termion = "1.5"
pathfinding = "2.0"
