[package]
name = "task22_2"
version = "0.1.0"
authors = ["Oleg Khryptul <okreptul@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-traits = "0.2"

[dependencies.num-bigint]
version = "0.2"
features = ["i128"]
