[package]
name = "task24_2"
version = "0.1.0"
authors = ["Oleg Khryptul <okreptul@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
anyhow = "1.0"
pathfinding = "2.0"
termion = "1.5"
# bitvec = "0.16"
